# qnap-configurations

./: .flake8  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: move_photo_files.md
docs/configurations/: crontab.md  logrotate.md  opkg.md  python_pillow.md
docs/others/: crontab.md  logrotate.md  opkg.md  python_pillow.md
docs/python/: python_pillow.md
src/move_photo_files/: move_other_image_files.py  move_photo_files.py
src/qnap-file-organizer/: .dockerignore  .flake8  Dockerfile  README.md  pyproject.toml
src/qnap-file-organizer/scripts/: exec.sh  move_other_image_files.py  move_photo_files.py
src/qnap-file-organizer/src/qnap_file_organizer/: __init__.py  __main__.py
