[project]
name = "qnap-configurations"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = [
    "pillow>=10.2.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "pytest-cov>=4.1.0",
    "pyclean>=3.0.0",
]

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
files = ["src/", "tests/"]

[[tool.mypy.overrides]]
module = ['PIL', 'PIL.ExifTags']
ignore_missing_imports = true

[tool.pdm.scripts]
clean = "pyclean ."
cleanx = {shell = "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$|/build$|/dist$)\" | xargs rm -rf"}
format = {composite = ["isort src/ tests/", "black src/ tests/"]}
lint = {composite = ["flake8", "mypy"]}
test = "pytest"
